fix(patient_table): table properly sets max height and handles overflow

--- a/birthday_reminder/static/style/birthday_reminder.css
+++ b/birthday_reminder/static/style/birthday_reminder.css
@@ -105,12 +105,6 @@ button:hover {
 }
 
 /*patients list*/
-#patient-table {
-  background-color: #fff;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
-}
-
 #patient-table-label {
   padding-top: 5px;
   border-radius: 3px;
@@ -126,13 +120,19 @@ button:hover {
 
 #patient-list {
   overflow-y: scroll;
-  max-height: 80%;
+  max-height: 60%;
   border-top: 1px solid #D3D3D3;
+  border-radius: 3px;
 }
 
 #patient-table-head {
-  width: 98.5%;
   padding: 4px 0px;
+  border-radius: 3px 3px 0px 0px;
+}
+
+.patient-table {
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
 
 .patient {
